[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/MinBarn.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/MinPinkSheep.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/bubblegum.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Images/button_normal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/button_highlight.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/AUDIENCE_Claps_and_Cheers_stereo.wav" type="AudioStream" id=7]

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="barn" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="PlayerImage" type="TextureRect" parent="."]
margin_left = 474.0
margin_top = 315.0
margin_right = 954.0
margin_bottom = 795.0
texture = ExtResource( 3 )

[node name="PlayerName" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 159.0
margin_top = 744.0
margin_right = 1329.0
margin_bottom = 841.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.52549, 0.509804, 0.788235, 1 )
text = "Player name abcdefghijkl"
align = 1
valign = 1

[node name="Congratulations" type="Label" parent="."]
margin_left = 241.749
margin_top = 943.251
margin_right = 1036.75
margin_bottom = 1040.25
rect_scale = Vector2( 1.3, 1.3 )
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.52549, 0.509804, 0.788235, 1 )
text = "Congratulations"

[node name="winner" type="Label" parent="."]
margin_left = 161.967
margin_top = 1196.15
margin_right = 748.967
margin_bottom = 1404.15
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.52549, 0.509804, 0.788235, 1 )
text = "WinnerText"
align = 1
valign = 1

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 224.0
margin_top = 1850.0
margin_right = 1266.0
margin_bottom = 2016.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="MenuButton"]
margin_left = 285.0
margin_right = 518.0
margin_bottom = 97.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.52549, 0.509804, 0.788235, 1 )
text = "Menu"

[node name="cheerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
